syntax="proto3";
option go_package = "./pb";

message UserModel {
  // @inject_tah: json:"id" form:"id"
  uint32 id = 1;
  // @inject_tah: json:"user_name" form:"user_name"
  string user_name = 2;
  // @inject_tah: json:"created_at" form:"created_at"
  int64 created_at = 3;
  // @inject_tah: json:"updated_at" form:"updated_at"
  int64 updated_at = 4;
  // @inject_tah: json:"delete_at" form:"delete_at"
  int64 delete_at = 5;
  // @inject_tah: json:"password" form:"password"
  string password = 6;
}

message UserReq {
  // @inject_tah: json:"user_name" form:"user_name"
  string user_name = 1;
  // @inject_tah: json:"password" form:"password"
  string password = 2;
  // @inject_tah: json:"id" form:"id"
  uint32 id = 3;
}

message UserRes {
  // @inject_tah: json:"user_detail" form:"user_detail"
  UserModel user_detail = 1;
  repeated UserModel user_list = 2;
  // @inject_tah: json:"code" form:"code"
  uint32 code = 3;
}

service User{
  rpc UserLogin(UserReq)returns(UserRes);
  rpc UserRegister(UserReq)returns(UserRes);
  rpc GetAllUser(UserReq)returns(UserRes);
  rpc ChangePassword(UserReq)returns(UserRes);
  rpc ChangeName(UserReq)returns(UserRes);
  rpc CheckPassword(UserReq)returns(UserRes);
}
